--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jwt-simple": "^0.5.1",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
-    "nodemon": "^1.15.0"
+    "nodemon": "^1.15.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1"
   }
 }
